--- a/main/references.bib
+++ b/main/references.bib
@@ -93,6 +93,14 @@
     publisher = "Wiely",
 }
 
+@book{Boyd,
+    author    = "Boyd, S and Vandenberghe, L",
+    title     = "{C}onvex optimization",
+    year      = "2004",
+    edition   = "1",
+    publisher = "Cambridge University Press",
+}
+
 @article{Kohler2001,
   author={Torsten Köhler and Peter Maass and Peter Wust and Martin Seebass},
   title={A fast algorithm to find optimal controls of multiantenna applicators in regional hyperthermia},
