--- a/main/main.tex
+++ b/main/main.tex
@@ -54,7 +54,7 @@ in relation to hyperthermia treatment
 \and Andréas Sundström\footnote{\href{mailto:andsunds@student.chalmers.se}{\tt andsunds@student.chalmers.se}}
 }
 
-\date{\today}
+\date{2017-09-07}%{\today}
 
 \maketitle
 
